--- a/layouts/partials/section-about.html
+++ b/layouts/partials/section-about.html
@@ -31,7 +31,7 @@
         </div>
         <div class="cols-2__col text-justify">
             <p><em>Résiste !</em> est un jeu de tuiles dont le but est de mettre à jour l’ordinateur central et ainsi le libérer du contrôle de Technomania. Pour atteindre cet objectif, relevez des épreuves et rassemblez les 4 pièces d’un puzzle. Une fois le puzzle complété, vous pourrez lancer la mise à jour et faire de l’ordinateur central un outil au service de toutes et tous ! Mais prenez garde… Technomania tente lui aussi d’installer un virus pour vous empêcher d’agir. Il vous faudra donc réussir votre mission avant le chargement complet de ce virus&nbsp;!</p>
-            <p>Après le succès de sa première version, le jeu <em>Résiste&nbsp;!</em> revient dans un nouveau modèle, encore plus amusant : emmenez vos élèves dans une activité motivante et instructive sur le thème de la démocratie et ses valeurs. Il vous permet d’aborder des concepts importants comme la démocratie, la résistance, les demandes d’asile, les institutions belges, le droit de grève, le droit de vote, etc., tout en passant un moment agréable en groupe.</p>
+            <p>Après le succès de sa première version, le jeu <em>Résiste&nbsp;!</em> revient dans un nouveau modèle, encore plus amusant : emmenez vos élèves dans une activité motivante et instructive sur le thème de la démocratie et ses valeurs. Il vous permet d’aborder des concepts importants comme la démocratie, la résistance, les droits individuels et collectifs, etc., tout en passant un moment agréable en groupe.</p>
         </div>
     </div>
 </section>
